fastmetrics-derive/tests/ui/fail/state_set_value_non_enum.rs
use fastmetrics_derive::StateSetValue;

// This should fail because StateSetValue is designed for enums
#[derive(StateSetValue)]
struct NotAnEnum {
    field: bool,
}

fn main() {}
